--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,52 +1,218 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GoToko</title>
-  </head>
-  <style>
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      font-family: Arial, Helvetica, sans-serif;
-      background-color: #ede9fe;
-    }
-    h5 {
-      font-weight: 700;
-      font-size: 1.5rem;
-    }
-    span {
-      font-weight: 500;
-    }
-    .container {
-      padding: 10px 15px 10px 15px;
-      background-color: #f5f3ff;
-      border-radius: 0.5rem;
-      color: #2e1065;
-      box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1),
-        0 4px 6px -4px rgb(0 0 0 / 0.1);
-    }
-    .container:hover {
-      background-color: #2e1065;
-      color: #f5f3ff;
-      transition-duration: 300ms;
-    }
-  </style>
-  <body>
-    <div class="container">
-      <h5>Selamat Datang di {{ appname }}</h5>
-      <h5>
-        Name:
-        <span>{{ name }}</span>
-      </h5>
+{% extends 'base.html' %} {% block content %} {% block css %}
+<style>
+  *,
+  *::before,
+  *::after {
+    box-sizing: border-box;
+  }
 
-      <h5>
-        Class:
-        <span>{{ class }}</span>
-      </h5>
+  * {
+    margin: 0;
+  }
+
+  body {
+    height: 100vh;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #ede9fe;
+  }
+
+  h5 {
+    font-weight: 700;
+    font-size: 1.5rem;
+  }
+  span {
+    font-weight: 500;
+  }
+
+  .container {
+    max-width: 640px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 2rem;
+    width: 100%;
+    padding: 2rem;
+    background-color: white;
+    border-radius: 1rem;
+    color: #2e1065;
+    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1),
+      0 4px 6px -4px rgb(0 0 0 / 0.1);
+  }
+
+   {
+    font-weight: 400;
+  }
+
+  .main {
+    margin-top: 5rem;
+  }
+
+  .welcome-container {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .welcome {
+    color: #2e1065;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+
+  .products-section {
+    margin-top: 5rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
+    width: 1080px;
+    margin-left: auto;
+    margin-right: auto;
+    color: #2e1065;
+  }
+
+  .product-card {
+    width: 250px;
+    height: 350px;
+    background-color: white;
+    padding: 20px 15px 20px 15px;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  }
+
+  .product-card:hover {
+    transform: translateY(-8px);
+    transition-duration: 300ms;
+    background-color: #fbfbfb;
+  }
+
+  .product-content {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+
+  .gambar {
+    width: 100%;
+    height: 150px;
+    border-radius: 1rem;
+    background-color: #ede9fe;
+  }
+
+  .add-product {
+    appearance: none;
+    background-color: transparent;
+    border: 2px solid #2e1065;
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: #2e1065;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: normal;
+    margin: 0;
+    min-height: 60px;
+    min-width: 0;
+    outline: none;
+    padding: 16px 24px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: 100%;
+    will-change: transform;
+  }
+
+  .add-product:hover {
+    color: white;
+    background-color: #2e1065;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    transform: translateX(-1px) translateY(-2px);
+  }
+
+  .add-product:active {
+    box-shadow: none;
+    transform: translateY(0);
+  }
+
+  span {
+    color: #ede9fe;
+    font-weight: bold;
+    padding: 10px;
+    background-color: #2e1065;
+    border-radius: 1rem;
+  }
+
+  .appname {
+    font-weight: 900;
+  }
+
+  .footer {
+    width: 100%;
+    height: 3rem;
+    background-color: white;
+    font-weight: 700;
+    padding: 2rem;
+    margin-top: 10rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  @media (min-width: 1280px) {
+    .container {
+      max-width: 1280px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+</style>
+{% endblock css%}
+<div class="container">
+  <div class="navbar">
+    <div class="left-nav">
+      <h1 class="appname">{{appname}}</h1>
     </div>
-  </body>
-</html>
+    <div class="right-nav">
+      <h4>{{name}}</h4>
+      <h4>{{class}}</h4>
+    </div>
+  </div>
+
+  <div class="main">
+    <div class="welcome-container">
+      <div class="welcome">
+        <h1>Halo! Selamat datang di <span>{{appname}}</span></h1>
+        <p>Silakan pilih barang kesukaanmu!</p>
+      </div>
+      <div>
+        <a href="{% url 'main:create_product_entry' %}">
+          <button class="add-product">+ Add New Product</button>
+        </a>
+      </div>
+    </div>
+    <div class="products-section">
+      {% for product in products %}
+      <div class="product-card">
+        <div class="gambar"></div>
+        <div class="product-content">
+          <h2>{{product.name}}</h2>
+          <p>Price: {{product.price}}</p>
+        </div>
+        <div class="product-footer">Stock: {{product.stock}}</div>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+</div>
+<div class="footer">&copy; 2024 gotoko.com</div>
+{% endblock content %}
