--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -164,8 +164,25 @@
     padding: 2rem;
     margin-top: 10rem;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 5px;
+  }
+
+  .logout {
+    appearance: none;
+    background-color: transparent;
+    padding: 5px 10px 5px 10px;
+    border: 2px solid #2e1065;
+    border-radius: 7px;
+    cursor: pointer;
+  }
+
+  .logout:hover {
+    background-color: #2e1065;
+    color: #ede9fe;
+    transition: all 300ms;
   }
 
   @media (min-width: 1280px) {
@@ -191,8 +208,11 @@
   <div class="main">
     <div class="welcome-container">
       <div class="welcome">
-        <h1>Halo! Selamat datang di <span>{{appname}}</span></h1>
+        <h1>Halo! {{name}}, Selamat datang di <span>{{appname}}</span></h1>
         <p>Silakan pilih barang kesukaanmu!</p>
+        <a href="{% url 'main:logout' %}">
+          <button class="logout">Logout</button>
+        </a>
       </div>
       <div>
         <a href="{% url 'main:create_product_entry' %}">
@@ -214,5 +234,8 @@
     </div>
   </div>
 </div>
-<div class="footer">&copy; 2024 gotoko.com</div>
+<div class="footer">
+  <p>Sesi terakhir login: {{ last_login|slice:":19" }}</p>
+  <p>&copy; 2024 gotoko.com</p>
+</div>
 {% endblock content %}
