--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -25,6 +25,7 @@
   }
 
   .container {
+    min-height: 100vh;
     max-width: 640px;
     margin-left: auto;
     margin-right: auto;
@@ -157,6 +158,7 @@
   }
 
   .footer {
+    bottom: 0;
     width: 100%;
     height: 3rem;
     background-color: white;
@@ -168,6 +170,7 @@
     justify-content: center;
     align-items: center;
     gap: 5px;
+    color: #2e1065;
   }
 
   .logout {
