--- a/main/templates/create_product_entry.html
+++ b/main/templates/create_product_entry.html
@@ -4,7 +4,7 @@
 
 <div class="flex flex-col min-h-screen bg-gradient-to-r from-violet-100 via-violet-300 to-violet-600">
   <div class="container mx-auto px-4 py-8 mt-16 max-w-xl">
-    <h1 class="text-3xl text-violet-950 font-bold text-center mb-8 text-black">
+    <h1 class="text-3xl text-violet-950 font-bold text-center mb-8">
       Create Product Entry
     </h1>
 
