--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -2,6 +2,7 @@
 {% load static %} 
 
 {% block meta %}
+<script src="https://cdn.jsdelivr.net/npm/dompurify@3.1.7/dist/purify.min.js"></script>
 <title>Gotoko</title>
 {% endblock meta %}
 {% block content %} 
@@ -25,51 +26,132 @@
       <div class="welcome flex flex-col gap-2 text-violet-950 font-semibold">
         <h1>
           Halo! {{name}}, Selamat datang di
-          <span class="text-2xl font-black bg-gradient-to-r from-violet-600 to-indigo-600 bg-clip-text text-transparent px-2"
+          <span class="text-3xl font-black bg-gradient-to-r from-violet-600 to-indigo-600 bg-clip-text text-transparent px-2"
             >{{appname}}</span
           >
         </h1>
         <p>Silakan pilih barang kesukaanmu!</p>
       </div>
-      <div>
+      <div class="flex flex-col sm:flex-row gap-2">
         <a href="{% url 'main:create_product_entry' %}">
           <button
-            class="add-product w-48 text-violet-950  border-2 border-violet-950 py-2 px-4 rounded-2xl hover:text-white hover:bg-violet-950 shadow-[0_8px_15px_rgba(0, 0, 0, 0.25)] hover:-translate-x-px hover:-translate-y-[2px] hover:duration-300 active:translate-y-0 active:shadow-none cursor"
-          >
-            + Add New Product
-          </button>
+            class="add-product w-48 text-violet-950 border-2 border-violet-950 h-fit py-2 px-4 rounded-2xl hover:text-white hover:bg-violet-950 shadow-[0_8px_15px_rgba(0, 0, 0, 0.25)] transition duration-300 ease-in-out transform hover:-translate-x-px hover:-translate-y-[2px] active:translate-y-0 active:shadow-none cursor"
+          >+ Add New Product</button>
         </a>
+        <button data-modal-target="crudModal" data-modal-toggle="crudModal" class="btn bg-violet-950 border-2 border-violet-950 hover:bg-violet-700 hover:border-violet-700 text-white w-fit h-fit py-2 px-4 rounded-2xl transition duration-300 ease-in-out transform shadow-[0_8px_15px_rgba(0, 0, 0, 0.25)] hover:-translate-x-px hover:-translate-y-[2px] hover:duration-300 active:translate-y-0 active:shadow-none cursor" onclick="showModal();">
+          Add New Product Entry by AJAX
+        </button>
       </div>
     </div>
     {% comment %} Show All Products {% endcomment %}
     <div class="mt-8 space-y-8">
       <h1 class="text-center font-bold text-2xl text-violet-950">All Products</h1>
-      {% comment %} Jika tidak ada products {% endcomment %}
-      {% if not products %} 
-      <div class="flex flex-col items-center justify-center p-6">
-          <img src="{% static 'image/noproduct.png' %}" alt="Sad face" width="500" height="500" loading="lazy"/>
-          <p class="text-center text-violet-950/80 text-lg md:text-xl font-lg mt-4">Belum ada product yang tersedia.</p>
+
+      <div id="product_entry_cards"></div>
+
+      <div id="crudModal" tabindex="-1" aria-hidden="true" class="hidden fixed inset-0 z-50 w-full flex items-center justify-center bg-gray-800 bg-opacity-50 overflow-x-hidden overflow-y-auto transition-opacity duration-300 ease-out">
+        <div id="crudModalContent" class="relative bg-white rounded-lg shadow-lg w-5/6 sm:w-3/4 md:w-1/2 lg:w-1/3 mx-4 sm:mx-0 transform scale-95 opacity-0 transition-transform transition-opacity duration-300 ease-out">
+          <!-- Modal header -->
+          <div class="flex items-center justify-between p-4 border-b rounded-t">
+            <h3 class="text-xl font-semibold text-violet-950">
+              Add New Mood Entry
+            </h3>
+            <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center" id="closeModalBtn">
+              <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+              </svg>
+              <span class="sr-only">Close modal</span>
+            </button>
+          </div>
+          <!-- Modal body -->
+          <div class="px-6 py-4 space-y-6 form-style">
+            <form id="productEntryForm">
+              <div class="mb-4">
+                <label for="name" class="block text-sm font-medium text-violet-950">Product</label>
+                <input type="text" id="name" name="name" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Enter your product" required>
+              </div>
+              <div class="mb-4">
+                <label for="price" class="block text-sm font-medium text-violet-950">Price</label>
+                <input id="price" name="price" rows="3" class="mt-1 block w-full resize-none border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Enter product price" required/>
+              </div>
+              <div class="mb-4">
+                <label for="description" class="block text-sm font-medium text-violet-950">Description</label>
+                <textarea id="description" name="description" rows="3" class="mt-1 block w-full resize-none border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Enter product description" required></textarea>
+              </div>
+              <div class="mb-4">
+                <label for="category" class="block text-sm font-medium text-violet-950">Category</label>
+                <input id="category" name="category" rows="3" class="mt-1 block w-full resize-none border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Enter product category" required/>
+              </div>
+              <div class="mb-4">
+                <label for="stock" class="block text-sm font-medium text-violet-950">Stock</label>
+                <input id="stock" name="stock" rows="3" class="mt-1 block w-full resize-none border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Enter product stock" required/>
+              </div>
+            </form>
+          </div>
+          <!-- Modal footer -->
+          <div class="flex flex-col space-y-2 md:flex-row md:space-y-0 md:space-x-2 p-6 border-t border-gray-200 rounded-b justify-center md:justify-end">
+            <button type="button" class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded-lg" id="cancelButton">Cancel</button>
+            <button type="submit" id="submitProductEntry" form="productEntryForm" class="bg-violet-950 hover:bg-violet-700 text-white font-bold py-2 px-4 rounded-lg">Save</button>
+          </div>
+        </div>
       </div>
-      {% comment %} Jika ada products {% endcomment %}
-      {% else %}
+    </div>
+    {% comment %} End of Show All Products {% endcomment %}
+  </div>
+</div>
+<div
+  class="footer bottom-0 mt-40 w-full h-12 flex flex-col sm:flex-row justify-center items-center gap-2 text-violet-950 font-semibold p-8 bg-white"
+>
+  <p>Sesi terakhir login: {{ last_login|slice:":19" }} </p>
+  <p><span class="hidden sm:inline">|</span> &copy; 2024 gotoko.com</p>
+</div>
+
+
+<script>
+  async function getProductEntries(){
+      return fetch("{% url 'main:show_json' %}").then((res) => res.json())
+  }
+
+  async function refreshProductEntries() {
+    document.getElementById("product_entry_cards").innerHTML = "";
+    document.getElementById("product_entry_cards").className = "";
+    const productEntries = await getProductEntries();
+    let htmlString = "";
+    let classNameString = "";
+
+    if (productEntries.length === 0) {
+        classNameString = "flex flex-col items-center justify-center p-6";
+        htmlString = `
+          <div class="flex flex-col items-center justify-center p-6">
+            <img src="{% static 'image/noproduct.png' %}" alt="Sad face" width="500" height="500" loading="lazy"/>
+            <p class="text-center text-violet-950/80 text-lg md:text-xl font-lg mt-4">Belum ada product yang tersedia.</p>
+          </div>
+        `;
+    }
+    else {
+        classNameString = "products-section mx-auto grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 justify-items-center p-4 gap-4 self-center text-violet-950 font-semibold"
+        productEntries.forEach((product) => {
+          const name = DOMPurify.sanitize(product.fields.name);
+          const price = DOMPurify.sanitize(product.fields.price);
+          const description = DOMPurify.sanitize(product.fields.description);
+          const category = DOMPurify.sanitize(product.fields.category);
+          const stock = DOMPurify.sanitize(product.fields.stock);
+            htmlString += `
       <div
-      class="products-section mx-auto grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 justify-items-center p-4 gap-4 self-center text-violet-950 font-semibold">
-      {% for product in products %}
-      <div
-        class="product-card flex flex-col justify-between w-[225px] h-[275px] md:w-[250px] md:h-[300px] lg:w-[300px] lg:h-[350px] bg-white py-[20px] px-[15px] rounded-2xl shadow-[0_4px_6px_-1px_rgb(0 0 0 / 0.1), 0_2px_4px_-2px_rgb(0 0 0 / 0.1)] hover:-translate-y-[8px] duration-300 bg-[#fbfbfb]"
+        class="product-card flex flex-col justify-between w-[200px] h-[250px] md:w-[250px] md:h-[300px] lg:w-[300px] lg:h-[350px] bg-white py-[20px] px-[15px] rounded-2xl shadow-[0_4px_6px_-1px_rgb(0 0 0 / 0.1), 0_2px_4px_-2px_rgb(0 0 0 / 0.1)] hover:-translate-y-[8px] duration-300 bg-[#fbfbfb]"
       >
           <div
             class="gambar w-full h-[100px] lg:h-[150px] rounded-2xl bg-violet-500"
           ></div>
-          <div class="product-content flex flex-col gap-1">
-            <h2>{{ product.name }}</h2>
-            <p class="font-normal">Price: {{ product.price }}</p>
-            <p class="font-normal">Stock: {{ product.stock}}</p>
+          <div class="product-content flex flex-col gap-1 text-sm md:text-xl  ">
+            <h2>${product.fields.name}</h2>
+            <p class="font-normal">Price: ${product.fields.price}</p>
+            <p class="font-normal">Stock: ${product.fields.stock}</p>
           </div>
           <div class="product-footer flex gap-2 flex justify-end">
             {% comment %} Edit Button {% endcomment %}
             <button class="p-1 rounded-lg bg-violet-950 w-fit hover:bg-violet-900 duration-300">
-              <a href="{% url 'main:edit_product' product.pk %}">
+              <a href="/edit-product/${product.pk}">
                 <svg
                   x="0px"
                   y="0px"
@@ -86,7 +168,7 @@
             </button>
             {% comment %} Delete Button {% endcomment %}
             <button class="p-1 rounded-lg bg-violet-950 w-fit hover:bg-violet-900 duration-300">
-              <a href="{% url 'main:delete_product' product.pk %}">
+              <a href="/delete/${product.pk}">
                 <svg
                   x="0px"
                   y="0px"
@@ -103,18 +185,58 @@
             </button>
           </div>
       </div>
-      {% endfor %}
-      </div>
-      {% endif %}
-     
-    </div>
-    {% comment %} End of Show All Products {% endcomment %}
-  </div>
-</div>
-<div
-  class="footer bottom-0 mt-40 w-full h-12 flex flex-col sm:flex-row justify-center items-center gap-2 text-violet-950 font-semibold p-8 bg-white"
->
-  <p>Sesi terakhir login: {{ last_login|slice:":19" }} </p>
-  <p><span class="hidden sm:inline">|</span> &copy; 2024 gotoko.com</p>
-</div>
+            `;
+        });
+    }
+    document.getElementById("product_entry_cards").className = classNameString;
+    document.getElementById("product_entry_cards").innerHTML = htmlString;
+}
+refreshProductEntries();
+
+const modal = document.getElementById('crudModal');
+const modalContent = document.getElementById('crudModalContent');
+
+function showModal() {
+    const modal = document.getElementById('crudModal');
+    const modalContent = document.getElementById('crudModalContent');
+
+    modal.classList.remove('hidden'); 
+    setTimeout(() => {
+      modalContent.classList.remove('opacity-0', 'scale-95');
+      modalContent.classList.add('opacity-100', 'scale-100');
+    }, 50); 
+}
+
+function hideModal() {
+    const modal = document.getElementById('crudModal');
+    const modalContent = document.getElementById('crudModalContent');
+
+    modalContent.classList.remove('opacity-100', 'scale-100');
+    modalContent.classList.add('opacity-0', 'scale-95');
+
+    setTimeout(() => {
+      modal.classList.add('hidden');
+    }, 150); 
+}
+
+document.getElementById("cancelButton").addEventListener("click", hideModal);
+document.getElementById("closeModalBtn").addEventListener("click", hideModal);
+
+function addProductEntry() {
+  fetch("{% url 'main:add_product_entry_ajax' %}", {
+    method: "POST",
+    body: new FormData(document.querySelector('#productEntryForm')),
+  })
+  .then(response => refreshProductEntries())
+
+  document.getElementById("productEntryForm").reset(); 
+  document.querySelector("[data-modal-toggle='crudModal']").click();
+
+  return false;
+}
+
+document.getElementById("submitProductEntry").onclick = addProductEntry
+</script>
+
+
 {% endblock content %}
