--- a/templates/base.html
+++ b/templates/base.html
@@ -13,16 +13,16 @@
         theme: {
           extend: {
             colors: {
-              cwhite: '#ECE8DF',
-              cblue: '#424475',
-              cred: '#E56F6F',
+              cwhite: "#ECE8DF",
+              cblue: "#424475",
+              cred: "#E56F6F",
             },
             fontFamily: {
-                'onest': ['Onest', 'serif', 'sans-serif'],
-            }
-          }
-        }
-      }
+              onest: ["Onest", "serif", "sans-serif"],
+            },
+          },
+        },
+      };
     </script>
   </head>
 
